--- a/SITIO_WEB/public/css/style.css
+++ b/SITIO_WEB/public/css/style.css
@@ -64,3 +64,15 @@ body {
     color: #888;
     font-style: italic;
 }
+
+/* PSEUDOCLASES */
+
+.custom-buttom {
+    padding: 10px 25px;
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
