--- a/SITIO_WEB/public/css/style.css
+++ b/SITIO_WEB/public/css/style.css
@@ -67,7 +67,7 @@ body {
 
 /* PSEUDOCLASES */
 
-.custom-buttom {
+.custom-button {
     padding: 10px 25px;
     background-color: var(--primary-color);
     color: white;
@@ -77,7 +77,7 @@ body {
     transition: background 0.3s ease;
 }
 
-.custom-buttom:hover {
+.custom-button:hover {
     background-color: #e67e22;
 }
 
